- modify package.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "your_id.helloworld",
-    "title": "HelloWorld",
-    "description": "HelloWorld extension example.",
-    "homepage": "https://github.com/staruml/staruml-helloworld",
+    "name": "khang-tuong.staruml.csharp-entity-generator",
+    "title": "StarUML C# Entity Generator",
+    "description": "An extension for StarUML to generate C# .NET Core Entity files ",
+    "homepage": "https://github.com/khang-tuong/StarUml.CSharpEntityGenerator",
     "version": "1.0.0",
     "keywords": [
-        "example",
-        "helloworld"
+        "csharpEntityGenerator",
+        "staruml.csharpEntityGenerator"
     ],
     "author": {
-        "name": "Minkyu Lee",
-        "email": "niklaus.lee@gmail.com",
-        "url": "https://github.com/niklauslee"
+        "name": "Duc Khang Tuong",
+        "email": "duckhangtuong@gmail.com",
+        "url": "https://github.com/khang-tuong"
     },
     "license": "MIT",
     "engines": {
